--- a/README
+++ b/README
@@ -7,7 +7,10 @@ notation (7.♣) is not possible in 1.8.
 
 
 Still to-do:
+- Player positions/dealer/blinds
 - Betting, raising, all-in, split-pots, etc.
+- Remove rigged deck, test by using mocking
+
 
 Ideas:
 - Add poker nicknames for hole cards (Anna Kournikova for Ace-King, etc.)
