--- a/README
+++ b/README
@@ -6,10 +6,10 @@ Note: Developed using Ruby 1.9, code breaks in 1.8. The card shorthand
 notation (7.♣) is not possible in 1.8.
 
 Still to-do:
+- Add generic compare to RankedHand
 - Dealer/blinds when players are sitting out
 - Betting, raising, all-in, split-pots, etc.
-- Remove rigged deck, test by using mocking
-- Rename 'Hole' to 'Pocket'?
+- Remove rigged deck, test by using mocking.
 
 Ideas:
 - Add poker nicknames for hole cards (Anna Kournikova for Ace-King, etc.)
